# Illarion-Server

./: .astylerc  .clang-format  .clang-tidy  .env.dist  .gitattributes  .gitignore  AUTHORS  ArmorObjectTable.cpp  ArmorObjectTable.hpp  Attribute.cpp  Attribute.hpp  CArmorObjectTable.cpp  CArmorObjectTable.h  CCharacter.cpp  CCharacter.hpp  CCommand.hpp  CCommonObjectTable.cpp  CCommonObjectTable.h  CContainer.cpp  CContainer.h  CContainerObjectTable.cpp  CContainerObjectTable.h  CContainerStack.cpp  CContainerStack.h  CField.cpp  CField.hpp  CIdCounter.cpp  CIdCounter.h  CLanguage.cpp  CLanguage.hpp  CLogger.cpp  CLogger.hpp  CLongTimeAction.cpp  CLongTimeAction.hpp  CLongTimeCharacterEffects.cpp  CLongTimeCharacterEffects.hpp  CLongTimeEffect.cpp  CLongTimeEffect.hpp  CLongTimeEffectTable.cpp  CLongTimeEffectTable.hpp  (+206 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
data/: ArmorObjectTable.cpp  ArmorObjectTable.hpp  CommonObjectTable.cpp  CommonObjectTable.hpp  ContainerObjectTable.cpp  ContainerObjectTable.hpp  Data.cpp  Data.hpp  LongTimeEffectTable.cpp  LongTimeEffectTable.hpp  MonsterAttackTable.cpp  MonsterAttackTable.hpp  NPCTable.cpp  (+33 more)
src/: Attribute.cpp  Attribute.hpp  CMakeLists.txt  Character.cpp  Character.hpp  CharacterContainer.cpp  CharacterContainer.hpp  Config.cpp  Config.hpp  Connection.hpp  Container.cpp  Container.hpp  Field.cpp  Field.hpp  InitialConnection.cpp  InitialConnection.hpp  Item.cpp  Item.hpp  ItemLookAt.hpp  Language.hpp  Logger.cpp  Logger.hpp  LongTimeAction.cpp  LongTimeAction.hpp  LongTimeCharacterEffects.cpp  LongTimeCharacterEffects.hpp  LongTimeEffect.cpp  LongTimeEffect.hpp  Makefile.am  Map.cpp  Map.hpp  MapException.hpp  MilTimer.cpp  MilTimer.hpp  MonitoringClients.cpp  MonitoringClients.hpp  Monster.cpp  Monster.hpp  NPC.cpp  NPC.hpp  (+58 more)
src/data/: ArmorObjectTable.cpp  ArmorObjectTable.hpp  CMakeLists.txt  CommonObjectTable.cpp  CommonObjectTable.hpp  ContainerObjectTable.cpp  ContainerObjectTable.hpp  Data.cpp  Data.hpp  ItemTable.cpp  ItemTable.hpp  LongTimeEffectTable.cpp  LongTimeEffectTable.hpp  MonsterAttackTable.cpp  MonsterAttackTable.hpp  MonsterTable.cpp  MonsterTable.hpp  NPCTable.cpp  NPCTable.hpp  NamesObjectTable.cpp  NamesObjectTable.hpp  NaturalArmorTable.cpp  NaturalArmorTable.hpp  QuestNodeTable.cpp  QuestNodeTable.hpp  QuestScriptStructTable.hpp  QuestTable.cpp  QuestTable.hpp  RaceAttributeTable.cpp  RaceAttributeTable.hpp  RaceSizeTable.cpp  RaceSizeTable.hpp  RaceTable.cpp  RaceTable.hpp  RaceTypeTable.cpp  RaceTypeTable.hpp  ScheduledScriptsTable.cpp  ScheduledScriptsTable.hpp  ScriptStructTable.hpp  ScriptVariablesTable.cpp  (+15 more)
src/db/: CMakeLists.txt  Connection.cpp  Connection.hpp  ConnectionManager.cpp  ConnectionManager.hpp  DeleteQuery.cpp  DeleteQuery.hpp  InsertQuery.cpp  InsertQuery.hpp  Query.cpp  Query.hpp  QueryAssign.cpp  QueryAssign.hpp  QueryColumns.cpp  QueryColumns.hpp  QueryTables.cpp  QueryTables.hpp  QueryWhere.cpp  QueryWhere.hpp  Result.hpp  SchemaHelper.cpp  SchemaHelper.hpp  SelectQuery.cpp  SelectQuery.hpp  UpdateQuery.cpp  UpdateQuery.hpp
src/dialog/: AuctionDialog.cpp  AuctionDialog.hpp  CMakeLists.txt  CraftingDialog.cpp  CraftingDialog.hpp  Dialog.cpp  Dialog.hpp  InputDialog.cpp  InputDialog.hpp  MerchantDialog.cpp  MerchantDialog.hpp  MessageDialog.cpp  MessageDialog.hpp  SelectionDialog.cpp  SelectionDialog.hpp
src/map/: CMakeLists.txt  Field.cpp  Field.hpp  Map.cpp  Map.hpp  WorldMap.cpp  WorldMap.hpp
src/netinterface/: BasicClientCommand.cpp  BasicClientCommand.hpp  BasicCommand.cpp  BasicCommand.hpp  BasicServerCommand.cpp  BasicServerCommand.hpp  ByteBuffer.cpp  ByteBuffer.hpp  CMakeLists.txt  CommandFactory.cpp  CommandFactory.hpp  NetInterface.cpp  NetInterface.hpp
src/netinterface/protocol/: BBIWIClientCommands.cpp  BBIWIClientCommands.hpp  BBIWIServerCommands.cpp  BBIWIServerCommands.hpp  CMakeLists.txt  ClientCommands.cpp  ClientCommands.hpp  ServerCommands.cpp  ServerCommands.hpp
src/script/: CMakeLists.txt  LuaDepotScript.cpp  LuaDepotScript.hpp  LuaItemScript.cpp  LuaItemScript.hpp  LuaLearnScript.cpp  LuaLearnScript.hpp  LuaLoginScript.cpp  LuaLoginScript.hpp  LuaLogoutScript.cpp  LuaLogoutScript.hpp  LuaLongTimeEffectScript.cpp  LuaLongTimeEffectScript.hpp  LuaLookAtItemScript.cpp  LuaLookAtItemScript.hpp  LuaLookAtPlayerScript.cpp  LuaLookAtPlayerScript.hpp  LuaMagicScript.cpp  LuaMagicScript.hpp  LuaMonsterScript.cpp  LuaMonsterScript.hpp  LuaNPCScript.cpp  LuaNPCScript.hpp  LuaPlayerDeathScript.cpp  LuaPlayerDeathScript.hpp  LuaPlayerTalkScript.cpp  LuaPlayerTalkScript.hpp  LuaQuestScript.cpp  LuaQuestScript.hpp  LuaReloadScript.cpp  LuaReloadScript.hpp  LuaScheduledScript.cpp  LuaScheduledScript.hpp  LuaScript.cpp  LuaScript.hpp  LuaTestSupportScript.cpp  LuaTestSupportScript.hpp  LuaTileScript.cpp  LuaTileScript.hpp  LuaTriggerScript.cpp  (+8 more)
src/script/binding/: CMakeLists.txt  armor_struct.cpp  attack_boni.cpp  auction_dialog.cpp  binding.hpp  character.cpp  character_skillvalue.cpp  colour.cpp  common_struct.cpp  container.cpp  crafting_dialog.cpp  field.cpp  input_dialog.cpp  item.cpp  item_look_at.cpp  item_struct.cpp  long_time_action.cpp  long_time_character_effects.cpp  long_time_effect.cpp  long_time_effect_struct.cpp  merchant_dialog.cpp  message_dialog.cpp  monster.cpp  monster_armor.cpp  npc.cpp  player.cpp  position.cpp  random.cpp  script_item.cpp  script_variables_table.cpp  selection_dialog.cpp  tiles_struct.cpp  waypoint_list.cpp  weapon_struct.cpp  weather_struct.cpp  world.cpp
test/: CMakeLists.txt  CharacterContainerTest.cpp  ItemTest.cpp  Makefile.am  test_binding.cpp  test_binding_armorstruct.cpp  test_binding_character.cpp  test_binding_item.cpp  test_binding_longtimeaction.cpp  test_binding_position.cpp  test_binding_random.cpp  test_binding_scriptitem.cpp  test_binding_weatherstruct.cpp  test_binding_world.cpp  test_container.cpp  test_issue_10631.cpp  test_map_import.cpp  test_random.cpp  test_timer.cpp
test/maps/: test.items.txt  test.tiles.txt  test.warps.txt
test/script/: issue_10631_a.lua  issue_10631_b.lua
(+221 files in other folders)
